force-app/main/default/objects/AccountSegment__c/AccountSegment__c.object-meta.xml
<CustomObject>
    <label>Account Segment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>