force-app/main/default/objects/AccountSegment__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>AccountSegment__c</referenceTo>
    <relationshipLabel>Accounts Segments</relationshipLabel>
    <relationshipName>Accounts_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>